<resources>
    <string name="app_name">Application UI</string>
    <string name="welcome_to_the_wild_code_school">Welcome to the Wild Code School</string>
    <string name="yes_i_want_to_be_a_wilder">Yes, I want to be a Wilder !</string>
    <string name="accept">Accept</string>
    <string name="enter_your_firstname">Enter your Firstname</string>
    <string name="enter_your_lastname">Enter your Lastname</string>
    <string name="error_empty">Please fill your firstname and lastname !</string>
    <string name="text_congratulation">Congratulation %s %s</string>
</resources>
